# robots-and-coffee

./: .gitignore  README.md  good_to_know.md
C++/: README.md
C++/CMake/: CMakeLists.txt  README.md
C++/CMake/subdirectories/: CMakeLists.txt
C++/robot/: CMakeLists.txt  README.md  robot.cc
Fun/: README.md
Latex/: README.md
Latex/Report/: report.tex  style.sty
Latex/Report/tex/: bibliography.tex  body_2.tex  conclusion.tex  title.tex
Latex/Templates/Report/: README.md
Latex/Templates/Report/tex/: appendix.tex  body_1.tex  examples.tex  introduction.tex
Shells/: .bashrc  README.md  bash_cheatsheet.md
Vim/: .vimrc  README.md  vim_cheatsheet.md  vim_plugins.md  vimrc.md
Vim/minimal/: .vimrc
